# hserve

./: .gitignore  CHANGELOG.md  README.md  hserve.cabal
app/: Config.hs  FileSystem.hs  HTTP.hs  HTTPTypes.hs  Main.hs  Time.hs  index.html
resource/: 404.html  405.html  index.html  test.html
resource/css/: style.css
resource/scripts/: index.js
