cabal-version:      2.4
name:               hserve
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mohammed Atallah
maintainer:         m.ibrahim.atallah@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hserve
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    other-modules:    
        HTTP
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        network ^>=3.1.2.7,
        bytestring,
        directory
    hs-source-dirs:   app
    default-language: Haskell2010
