cabal-version:      2.4
name:               hserve
version:            0.2.0.0
author:             Mohammed Atallah
maintainer:         m.ibrahim.atallah@gmail.com
extra-source-files: CHANGELOG.md
executable hserve
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    other-modules:    
        HTTP
        HTTPTypes
        Time
        Config
        FileSystem
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options:
        -Wall
    build-depends:    
        base ^>=4.14.3.0,
        time,
        network ^>=3.1.2.7,
        bytestring ^>=0.11.2.0,
        directory ^>=1.3.7.0,
    hs-source-dirs:   app
    default-language: Haskell2010
